tests/reference/asr-array_transfer_01-3dca715.stderr
semantic error: size argument to `transfer` intrinsic must be of Integer type.
 --> tests/errors/array_transfer_01.f90:5:29
  |
5 |     print *, transfer(a, 1, size_a)
  |                             ^^^^^^ 
